[tool.poetry]
name = "mlflow-tutorial"
version = "0.1.0"
description = "Demo for MLflow with Stable-Baselines3"
authors = ["Mikihisa Yuasa <myuasa2@illinois.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.16.2"
stable-baselines3 = "^2.3.2"
gymnasium = "^0.29.1"
pysftp = "^0.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
