[tool.poetry]
name = "mlflow-tutorial"
version = "0.1.0"
description = "Demo for MLflow with Stable-Baselines3"
authors = ["Mikihisa Yuasa <myuasa2@illinois.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.16.2"
stable-baselines3 = "^2.3.2"
gymnasium = "^0.29.1"
pysftp = "^0.2.9"
psutil = "^6.0.0"
mlflow-rl-tools = { git = "https://github.com/miki-yuasa/mlflow-rl-tools.git", branch = "dev", extras = [
    "sb3",
] }
imageio = "^2.35.1"
pygame = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
